--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ script:
   - export SRC_BRANCH="$(./scripts/ci/src_branch)"
   - export PR_NUMBER="$(./scripts/ci/pr_number)"
   - ./scripts/tests/pod
+  - ./scripts/tests/app
   - ./scripts/tests/lint
 notifications:
   email: false
