--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 env:
   global:
     - SDK="iphonesimulator10.3"
-    - SCHEME='Demo'
+    - SCHEME='AtoneConDemo'
     - WORKSPACE='AtoneCon.xcworkspace'
     - DESTINATION="OS=10.3.1,name=iPhone 7"
     - CONFIGURATION='Debug'
