update object mapper library and swiftlint

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -67,33 +67,33 @@ custom_rules:
     severity: error
   delegate:
     name: "delegate"
-    regex: "(\s{2,}var\s+delegate)"
+    regex: "(  var delegate)"
     message: "Please use \"weak\" for \"delegate\". "
     severity: error
   comments_space:
     name: "Space After Comment"
-    regex: "(^\s*//\w+)"
+    regex: (^ *//\w+)
     message: "There should be a space after //"
     severity: warning
     match_kinds: comment
   switch_enum:
     name: "Switch Enum"
-    regex: "(case\s\w+\.+rawValue:)"
+    regex: (case\s\w+\.+rawValue:)
     message: "Do not use enum.rawValue in switch-case. Please convert value to enum first. "
     severity: warning
   compile_lookup:
     name: "Compile Lookup"
-    regex: "((var|let)\s+\w+\s*=\s*\[)"
+    regex: ((var|let) \w+ = \[)
     message: "You need to give types to the array and dictionary. "
     severity: error
   weak_self_usage:
     name: "Weak Self Usage"
-    regex: "(self\?\.)"
+    regex: (self\?\.)
     message: "Explicitly extending lifetime is preferred to optional binding. Ex: \"guard let this = self else { return }\". "
     severity: warning
   weak_self_binding:
     name: "Weak Self Binding"
-    regex: "(let\s+(?!this)\w+\s*=\s*self[,\s])"
+    regex: (let (?!this)\w+ = self[, ])
     message: "Please use \"let this = self\" or \"let `self` = self\" instead. "
     severity: warning
   unowned:
@@ -103,16 +103,16 @@ custom_rules:
     severity: error
   empty_string:
     name: "Empty String"
-    regex: "(.length\s*(==|!=|<|<=|>|>=)\s*0)"
+    regex: ((!\w+.isNotEmpty)|(length == 0))
     message: "Please use \"isEmpty\" instead. "
     severity: error
   bracket:
     name: "Bracket"
-    regex: "(\}\n{2,}\}|\{\n{2,}\{)"
+    regex: (\}\n{2,}\}|\{\n{2,}\{)
     message: "No empty line between two open or close brackets. "
     severity: warning
   query_string:
     name: "Query String"
-    regex: "(\s+[=!><]+ \\\(.*\))"
+    regex: ( [=!><]+ \\\(.*\))
     message: "Donot use the string interpolation syntax for query string. "
     severity: warning
