--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -41,7 +41,7 @@ type_name:
   max_length:
     warning: 40
     error: 60
-variable_name:
+identifier_name:
   min_length:
     warning: 1
   max_length:
